Update list of cask installed applications

--- a/.dotfiles/Brewfile
+++ b/.dotfiles/Brewfile
@@ -51,10 +51,9 @@ cask "firefox"
 cask "gimp"
 cask "google-chrome"
 cask "gpg-suite"
-cask "intellij-idea-ce"
-cask "java8"
 cask "plex-media-player"
 cask "qbittorrent"
+cask "sdformatter"
 cask "skype"
 cask "sourcetree"
 cask "spotify"
