Replace Keybase chat with Riot chat

--- a/.dotfiles/Brewfile
+++ b/.dotfiles/Brewfile
@@ -56,10 +56,10 @@ cask "gimp"
 cask "google-chrome"
 cask "gpg-suite"
 cask "imageoptim"
-cask "keybase"
 cask "ledger-live"
 cask "plex-media-player"
 cask "qbittorrent"
+cask "riot"
 cask "sdformatter"
 cask "skype"
 cask "sourcetree"
