Add KeepingYouAwake app to Brewfile

--- a/.dotfiles/Brewfile
+++ b/.dotfiles/Brewfile
@@ -56,6 +56,7 @@ cask "gimp"
 cask "google-chrome"
 cask "gpg-suite"
 cask "imageoptim"
+cask "keepingyouawake"
 cask "ledger-live"
 cask "plex-media-player"
 cask "qbittorrent"
