--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -4,11 +4,11 @@
         80
     ],
     "editor.scrollBeyondLastLine": false,
+    "editor.tabSize": 2,
     "files.trimFinalNewlines": true,
     "files.trimTrailingWhitespace": true,
     "files.insertFinalNewline": true,
     "workbench.colorTheme": "One Dark Pro",
     "workbench.startupEditor": "none",
-    "workbench.tips.enabled": false,
-    "workbench.statusBar.feedback.visible": false
+    "workbench.tips.enabled": false
 }
