--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,14 @@ jobs:
 
     # macOS High Sierra (version 10.13)
     - stage: test
-      name: "macOS 10.13 and Xcode 10.1"
+      name: 'macOS 10.13 and Xcode 10.1'
       osx_image: xcode10.1
+      script:
+        - ./install.sh -f
+
+    # macOS Mojave (version 10.14)
+    - stage: test
+      name: 'macOS 10.14 and Xcode 11.0'
+      osx_image: xcode11
       script:
         - ./install.sh -f
