Update the Homebrew cask name for the Tor browser to the correct one

--- a/.dotfiles/Brewfile
+++ b/.dotfiles/Brewfile
@@ -60,7 +60,7 @@ cask "skype"
 cask "sourcetree"
 cask "spotify"
 cask "steam"
-cask "torbrowser"
+cask "tor-browser"
 cask "virtualbox"
 cask "visual-studio-code"
 cask "vlc"
