Add/remove new and unused packages from Brewfile

--- a/.dotfiles/Brewfile
+++ b/.dotfiles/Brewfile
@@ -17,6 +17,7 @@ brew "coreutils"
 
 # Useful packages.
 brew "git"
+brew "nvm"
 brew "pyenv"
 brew "rbenv"
 brew "shellcheck"
@@ -41,7 +42,6 @@ brew "qt"
 brew "node@10"
 
 # Install macOS applications distributed as binaries.
-cask "adobe-creative-cloud"
 cask "cleanmymac"
 cask "discord"
 cask "dropbox"
@@ -52,6 +52,7 @@ cask "gpg-suite"
 cask "imageoptim"
 cask "keepingyouawake"
 cask "ledger-live"
+cask "mullvadvpn"
 cask "plex-media-player"
 cask "qbittorrent"
 cask "riot"
@@ -71,8 +72,7 @@ mas "Magnet", id: 441258766
 mas "Microsoft Excel", id: 462058435
 mas "Microsoft PowerPoint", id: 462062816
 mas "Microsoft Word", id: 462054704
-mas "Reeder", id: 880001334
+mas "Reeder 4", id: 1449412482
 mas "Spark", id: 1176895641
 mas "Telegram", id: 747648890
-mas "WireGuard", id: 1451685025
 mas "Xcode", id: 497799835
