Update to `brew cask` installed apps

--- a/dotfiles/Brewfile
+++ b/dotfiles/Brewfile
@@ -35,22 +35,22 @@ brew "qrencode"
 brew "qt"
 
 # Install macOS applications distributed as binaries.
-cask "cleanmymac"
 cask "discord"
-cask "dropbox"
+cask "element"
 cask "firefox"
 cask "gimp"
 cask "google-chrome"
 cask "gpg-suite"
 cask "imageoptim"
+cask "jetbrains-toolbox"
 cask "keepingyouawake"
 cask "ledger-live"
+cask "mongodb-compass"
 cask "mullvadvpn"
+cask "postman"
 cask "plex-media-player"
 cask "qbittorrent"
-cask "riot"
 cask "sdformatter"
-cask "skype"
 cask "sourcetree"
 cask "spotify"
 cask "steam"
